--- a/Gallery/style.css
+++ b/Gallery/style.css
@@ -162,6 +162,7 @@ body {
 
 .footer {
   display: flex;
+  width:100vw;
   background-color: #990033;
   justify-content: space-between;
   color: #fff;
