--- a/About/style.css
+++ b/About/style.css
@@ -65,13 +65,18 @@ body {
   width: 90%;
 }
 
+body{
+  margin:0px;
+}
+
 .footer {
   display: flex;
+  width:100vw;
   background-color: #990033;
   justify-content: space-between;
   color: #fff;
   padding: 10px;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 .footer p {
