--- a/Contact Us/style.css
+++ b/Contact Us/style.css
@@ -90,13 +90,18 @@ button {
   font-size: 16px;
 }
 
+body{
+  margin:0px;
+}
+
 .footer {
   display: flex;
+  width:100vw;
   background-color: #990033;
   justify-content: space-between;
   color: #fff;
   padding: 10px;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 .footer p {
