--- a/Home/style.css
+++ b/Home/style.css
@@ -145,13 +145,17 @@ body {
   bottom: 50px;
 }
 
+body{
+  margin:0px;
+}
 .footer {
   display: flex;
+  width:100vw;
   background-color: #990033;
   justify-content: space-between;
   color: #fff;
   padding: 10px;
-  margin-top: 10%;
+  margin-top: 30px;
 }
 
 .footer p {
