--- a/wines/style.css
+++ b/wines/style.css
@@ -46,12 +46,18 @@ body {
   margin-bottom: 20px; /* Add bottom margin for spacing between cards */
 }
 
+body{
+  margin:0px;
+}
+
 .footer {
   display: flex;
+  width:100vw;
   background-color: #990033;
   justify-content: space-between;
   color: #fff;
   padding: 10px;
+  margin-top: 30px;
 }
 
 .footer p {
