--- a/About/style.css
+++ b/About/style.css
@@ -30,7 +30,7 @@ body {
 .container {
   display: flex;
   flex-wrap: wrap; /* Allow containers to wrap to the next line on smaller screens */
-  justify-content: center; /* Center the containers */
+  justify-content: space-around; /* Center the containers */
 }
 
 .container .left {
@@ -48,7 +48,6 @@ body {
   width: 100%; /* Full width on smaller screens */
   max-width: 600px; /* Set a maximum width for larger screens */
   margin-bottom: 20px; /* Add bottom margin for spacing between containers */
-  padding-left: 40px;
 }
 
 .carousel1 {
@@ -100,6 +99,13 @@ html, body {
   .container1 {
     flex-direction: column-reverse; /* Reverse the order for smaller screens */
     align-items: center; /* Center the items vertically on smaller screens */
+  }
+  .container2 {
+    flex-direction: column; /* Reverse the order for smaller screens */
+    align-items: center; /* Center the items vertically on smaller screens */
+  }
+  .container .right  {
+    padding: 0px;
   }
 
 }
