--- a/Header Menu and Modal/style.css
+++ b/Header Menu and Modal/style.css
@@ -12,6 +12,7 @@
   justify-content: space-between;
   flex-direction: row;
   padding: 0px 20px;
+  margin-top: 10px;
   background-color: #e6cfac;
 }
 
