wine-order-only-for-germans-modal-fix

--- a/Header Menu and Modal/style.css
+++ b/Header Menu and Modal/style.css
@@ -115,3 +115,9 @@ nav a:hover {
 .prev-modal {
   color: #990033;
 }
+
+@media screen and (max-width: 768px) {
+  .modal-content nav ul li a {
+    font-size: 24px;
+  }
+}
