--- a/Header Menu and Modal/style.css
+++ b/Header Menu and Modal/style.css
@@ -120,4 +120,13 @@ nav a:hover {
   .modal-content nav ul li a {
     font-size: 24px;
   }
+  .header .logo {
+    margin-left: 0px;
+  }
+  .menu {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    margin-right: 0px
+  }
 }
